# playground

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .lfsconfig  .projectile  ARCHITECTURE.org  CMakeLists.txt  CMakePresets.json  README.md  TODO.org  asan_blacklist.txt  compile_commands.json  headers  meson.build  meson_options.txt  regen_cmake_cache.ps1  run_clang_tidy.py  todo.txt
apps/biv/: CMakeLists.txt
apps/biv/shaders/: viewer.vert.glsl
apps/biv/src/: inputs.cpp  inputs.h  main.cpp
apps/handmade/: CMakeLists.txt
apps/handmade/src/: common.cpp  common.h  main.cpp  platform.h
assets/: CMakeLists.txt
assets/include/assets/: asset.h  asset_constructors.h  asset_database.h  asset_manager.h  material.h  mesh.h  subscene.h  texture.h
assets/src/: asset.cpp  asset_database.cpp  asset_id.cpp  asset_manager.cpp  hash_file.h  material.cpp  mesh.cpp  subscene.cpp  texture.cpp
assets/src/importers/: gltf_importer.cpp  importer.cpp  ktx2_importer.cpp  png_importer.cpp
biv/: CMakeLists.txt
biv/shaders/: CMakeLists.txt  ui.frag.glsl  ui.vert.glsl  viewer.frag.glsl  viewer.vert.glsl
biv/src/: font.cpp  font.h  glyph_cache.cpp  glyph_cache.h  imgui_config.h  inputs.cpp  inputs.h  main.cpp  painter.cpp  painter.h  rect.h  shelf_allocator.cpp  shelf_allocator.h  ui.cpp  ui.h
cross/: CMakeLists.txt
cross/include/cross/: buttons.h  events.h  file_dialog.h  file_watcher.h  mapped_file.h  platform.h  uuid.h  window.h  window_keys.def
cross/src/: file_dialog_linux.cpp  file_dialog_linux_cpp  file_dialog_win32.cpp  file_watcher.cpp  mapped_file.cpp  mapped_file_unix.cpp  mapped_file_win32.cpp  platform_win32.cpp  utils_win32.cpp  utils_win32.h  uuid.cpp  window_win32.cpp  window_xcb.cpp
editor/: CMakeLists.txt
editor/shaders/: simple_mesh.frag.glsl  srgb_pass.comp.glsl
editor/src/: app.cpp  app.h  custom_ui.cpp  custom_ui.h  main.cpp  mesh_renderer.cpp  mesh_renderer.h  renderer.cpp  renderer.h  ui.h
engine/: CMakeLists.txt
engine/include/engine/: inputs.h  render_world.h  render_world_system.h  scene.h  ui.h
engine/schemas/: CMakeLists.txt  asset.fbs  exo.fbs  material.fbs  material_header.fbs  mesh.fbs  subscene.fbs  texture.fbs  texture_header.fbs
engine/shaders/: CMakeLists.txt  build_luminance_histo.comp  checkerboard_floor.frag  depth_reduction.comp.glsl  drawcalls_fill_predicate.comp  drawcalls_fill_predicate.comp.glsl  fullscreen_triangle.vert  gen_draw_calls.comp  gltf_prepass.frag  gui.frag  gui.frag.glsl  gui.frag.hlsl  gui.vert  gui.vert.glsl  gui.vert.hlsl  gui_uint.frag  hybrid.frag  init_draw_calls.comp  init_draw_calls.comp.glsl  instances_culling.comp  instances_culling.comp.glsl  opaque.frag  opaque.frag.glsl  opaque.vert  opaque.vert.glsl  path_tracer.comp  path_tracer.comp.glsl  shadow_bounds.comp.glsl  shadowmap.vert  taa.comp  taa.comp.glsl  tonemap.comp  tonemap.comp.glsl  visibility_shading.comp  visibility_shading.comp.glsl  voxel_points.frag  voxelization.frag  voxelization.geom  voxelization.vert
engine/shaders/include/: atmosphere.h  bvh.h  constants.h  csm.h  globals.h  hash.h  imgui.h  maths.h  pbr.h  raytracing.h  sequences.h  types.h
engine/shaders/scan/: copy_draw_calls.comp  copy_draw_calls.comp.glsl  copy_instances_index.comp  copy_instances_index.comp.glsl  parallel_prefix_sum.comp  parallel_prefix_sum.comp.glsl
engine/shaders/sky/: sky_raymarch.frag.glsl  skyview_lut.frag  skyview_lut.frag.glsl  transmittance_lut.frag  transmittance_lut.frag.glsl
engine/src/: app.cpp  app.h  app.hpp  asset_manager.cpp  asset_manager.h  asset_manager.hpp  camera.cpp  camera.h  camera.hpp  ecs.cpp  ecs.h  ecs.hpp  eva-icons.h  eva-icons.hpp  glb.cpp  glb.h  glb.hpp  gltf.cpp  gltf.hpp  imgui_config.h  inputs.cpp  inputs.h  main.cpp  pch.h  render_world_system.cpp  scene.cpp  scene.h  scene.hpp  tools.cpp  tools.h  tools.hpp  ui.cpp  ui.h  ui.hpp
engine/src/assets/: asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  flatbuffer_utils.h  material.cpp  material.h  mesh.cpp  mesh.h  subscene.cpp  subscene.h  texture.cpp  texture.h
engine/src/base/: free_list.cpp  free_list.hpp  pool.cpp  pool.hpp  types.hpp  vectors.cpp  vectors.hpp
engine/src/components/: camera_component.h  input_camera_component.h  input_camera_component.hpp  mesh_component.h  mesh_component.hpp  sky_atmosphere_component.h  sky_atmosphere_component.hpp  transform_component.h  transform_component.hpp
engine/src/gameplay/: component.cpp  component.h  entity.cpp  entity.h  entity_world.cpp  entity_world.h  loading_context.cpp  loading_context.h  system.h  system_registry.h  update_context.h
engine/src/platform/: file_dialog.hpp  file_dialog_win32.cpp  file_watcher.cpp  file_watcher.hpp  mapped_file.cpp  mapped_file.hpp  utils_win32.cpp  window.hpp  window_win32.cpp  window_xcb.cpp
engine/src/render/: base_renderer.cpp  base_renderer.h  base_renderer.hpp  bvh.cpp  bvh.h  gfx.hpp  gpu_pool.cpp  gpu_pool.hpp  imgui_pass.cpp  material.h  mesh.h  mesh.hpp  render_timings.cpp  render_timings.h  render_timings.hpp  render_world.h  (+15 more)
exo/: CMakeLists.txt
exo/src/: buddy_allocator.cpp  free_list.cpp  lib.cpp  matrices.cpp  path.cpp  path.tests.cpp  pool.cpp  serializer.cpp  string_repository.cpp  uuid.cpp  uuid_serializer.cpp  vectors.cpp
libs/assets/: CMakeLists.txt
libs/cross/: CMakeLists.txt
libs/engine/: CMakeLists.txt
libs/exo/: CMakeLists.txt  engine.natvis  exo.natvis
libs/gameplay/: CMakeLists.txt
libs/rhi/: CMakeLists.txt
painter/: CMakeLists.txt
painter/src/: font.cpp  glyph_cache.cpp  painter.cpp  shelf_allocator.cpp
render/: CMakeLists.txt
render/src/: base_renderer.cpp  bvh.cpp  render_timings.cpp  render_world_system.cpp  renderer.cpp  ring_buffer.cpp  simple_renderer.cpp  streamer.cpp  unified_buffer_storage.cpp
render_sample/: CMakeLists.txt
render_sample/shaders/: CMakeLists.txt  font.frag.glsl  font.vert.glsl
render_sample/src/: font.h  glyph_cache.cpp  main.cpp  painter.cpp  painter.h  rect.h  ui.cpp  ui.h
ui_renderer/: CMakeLists.txt
ui_renderer/shaders/: ui.frag.glsl
ui_renderer/src/: ui_renderer.cpp
(+798 files in other folders)
